# fast-client-exp

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package.json  tailwind.config.js
migrations/: 002_create_customers.sql  003_create_customer_notes.sql  004_add_user_name.sql  005_add_review_fields.sql
src/: main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/database/: migrations.rs  mod.rs  pool.rs
src/handlers/: auth.rs  csv.rs  customers.rs  dashboard.rs  import.rs  login_template.rs  mod.rs  notes.rs  register.rs  scrape.rs
src/models/: customer.rs  customer_note.rs  mod.rs  user.rs
src/static/js/: app.js
templates/: dashboard.html  login.html  register.html
templates/components/: sidebar.html
templates/customers/: create.html  index.html  notes.html  show.html
templates/layouts/: app.html  auth.html  base.html
